cluster/core/netpol/traefik.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
  namespace: traefik
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-traefik-ingress
  namespace: traefik
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: traefik
  policyTypes:
  - Ingress
  ingress:
  - from:
    - ipBlock:
        cidr: 192.168.0.0/24
    - ipBlock:
        cidr: 192.168.30.50/32
    - ipBlock:
        cidr: 192.168.30.51/32
    - ipBlock:
        cidr: 192.168.30.98/32
    - ipBlock:
        cidr: 192.168.30.99/32
    - ipBlock:
        cidr: 192.168.30.100/32
    - ipBlock:
        cidr: 192.168.30.101/32
    - ipBlock:
        cidr: 192.168.30.102/32
    - ipBlock:
        cidr: 192.168.30.103/32
    - ipBlock:
        cidr: 192.168.30.201/32
    - ipBlock:
        cidr: 192.168.30.202/32
    ports:
    - protocol: TCP
      port: 8000
    - protocol: TCP
      port: 8443
  - from:
    - ipBlock:
        cidr: 192.168.10.0/24
    - ipBlock:
        cidr: 192.168.20.0/24
    ports:
    - protocol: TCP
      port: 8000
  - from:
    - ipBlock:
        cidr: 192.168.20.49/32
    - ipBlock:
        cidr: 192.168.20.50/32
    - ipBlock:
        cidr: 192.168.20.51/32
    - ipBlock:
        cidr: 192.168.20.52/32
    - ipBlock:
        cidr: 192.168.20.53/32
    - ipBlock:
        cidr: 192.168.20.54/32
    - ipBlock:
        cidr: 192.168.20.193/32
    ports:
    - protocol: TCP
      port: 8443
  - from:
    - ipBlock:
        cidr: 192.168.40.101/32
    - ipBlock:
        cidr: 192.168.40.102/32
    - ipBlock:
        cidr: 192.168.90.0/24
    ports:
    - protocol: TCP
      port: 8443
  - from:
    - ipBlock:
        cidr: 108.230.245.252/32
    - ipBlock:
        cidr: 107.201.253.242/32
    - ipBlock:
        cidr: 70.114.34.157/32
    ports:
    - protocol: TCP
      port: 8443
  - from:
    - namespaceSelector:
        matchLabels:
          ns: uptime
    - podSelector:
        matchLabels:
          app.kubernetes.io/name: uptime
    ports:
    - protocol: TCP
      port: 8000
    - protocol: TCP
      port: 8443
  - from:
    - namespaceSelector:
        matchLabels:
          ns: home-automation
    - podSelector:
        matchLabels:
          app.kubernetes.io/name: home-assistant
    ports:
    - protocol: TCP
      port: 8443
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-traefik-egress
  namespace: traefik
spec:
  policyTypes:
  - Egress
  podSelector:
    matchLabels:
      app.kubernetes.io/name: traefik
  egress:
  - to:
    - ipBlock:
        cidr: 192.168.0.0/24
    ports:
    - port: 6443
      protocol: TCP
  - to:
    - podSelector:
        matchLabels:
          app.kubernetes.io/name: traefik-forward-auth
    ports:
    - port: 4181
      protocol: TCP
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system
      podSelector:
        matchLabels:
          k8s-app: kube-dns
    ports:
    - port: 53
      protocol: UDP
    - port: 53
      protocol: TCP
  - to:
    - ipBlock:
        cidr: 192.168.0.10/32
    - ipBlock:
        cidr: 192.168.0.77/32
    - ipBlock:
        cidr: 192.168.0.78/32
    ports:
    - port: 53
      protocol: UDP
    - port: 53
      protocol: TCP
  - to:
    - namespaceSelector:
        matchLabels:
          ns: adguard
      podSelector:
        matchLabels:
          app.kubernetes.io/name: adguard-home
    ports:
    - port: 53
      protocol: UDP
    - port: 3000
      protocol: TCP
  - to:
    - namespaceSelector:
        matchLabels:
          ns: sonarr
      podSelector:
        matchLabels:
          app.kubernetes.io/name: sonarr
    - namespaceSelector:
        matchLabels:
          ns: sonarr
      podSelector:
        matchLabels:
          app.kubernetes.io/name: sonarr-anime
    - namespaceSelector:
        matchLabels:
          ns: sonarr
      podSelector:
        matchLabels:
          app.kubernetes.io/name: sonarr-remux
    ports:
    - port: 8989
      protocol: TCP
  - to:
    - namespaceSelector:
        matchLabels:
          ns: radarr
      podSelector:
        matchLabels:
          app.kubernetes.io/name: radarr
    - namespaceSelector:
        matchLabels:
          ns: radarr
      podSelector:
        matchLabels:
          app.kubernetes.io/name: radarr-anime
    - namespaceSelector:
        matchLabels:
          ns: radarr
      podSelector:
        matchLabels:
          app.kubernetes.io/name: radarr-remux
    ports:
    - port: 7878
      protocol: TCP
  - to:
    - namespaceSelector:
        matchLabels:
          ns: jellyseerr
      podSelector:
        matchLabels:
          app.kubernetes.io/name: jellyseerr
    ports:
    - port: 5055
      protocol: TCP
  - to:
    - namespaceSelector:
        matchLabels:
          ns: resilio
      podSelector:
        matchLabels:
          app.kubernetes.io/name: resilio-sync
    ports:
    - port: 8888
      protocol: TCP
    - port: 55555
      protocol: TCP
  - to:
    - namespaceSelector:
        matchLabels:
          ns: longhorn-system
      podSelector:
        matchLabels:
          app.kubernetes.io/name: longhorn
    ports:
    - port: 8000
      protocol: TCP
  - to:
    - namespaceSelector:
        matchLabels:
          ns: home-automation
      podSelector:
        matchLabels:
          app.kubernetes.io/name: home-assistant
    ports:
    - port: 8123
      protocol: TCP
    - port: 8080
      protocol: TCP
  - to:
    - namespaceSelector:
        matchLabels:
          ns: home-automation
      podSelector:
        matchLabels:
          app.kubernetes.io/name: esphome
    ports:
    - port: 6052
      protocol: TCP
    - port: 8080
      protocol: TCP
  - to:
    - namespaceSelector:
        matchLabels:
          ns: home-automation
      podSelector:
        matchLabels:
          app.kubernetes.io/name: node-red
    ports:
    - port: 1880
      protocol: TCP
  - to:
    - ipBlock:
        cidr: 192.168.0.0/24
    ports:
    - port: 6052
      protocol: TCP
    - port: 8080
      protocol: TCP
  - to:
    - namespaceSelector:
        matchLabels:
          ns: hajimari
      podSelector:
        matchLabels:
          app.kubernetes.io/name: hajimari
    ports:
    - port: 3000
      protocol: TCP
  - to:
    - namespaceSelector:
        matchLabels:
          ns: prowlarr
      podSelector:
        matchLabels:
          app.kubernetes.io/name: prowlarr
    ports:
    - port: 9696
      protocol: TCP
  - to:
    - namespaceSelector:
        matchLabels:
          ns: nginx
      podSelector:
        matchLabels:
          app.kubernetes.io/name: nginx
    ports:
    - port: 8080
      protocol: TCP
  - to:
    - namespaceSelector:
        matchLabels:
          ns: uptime
      podSelector:
        matchLabels:
          app.kubernetes.io/name: uptime
    ports:
    - port: 3001
      protocol: TCP
  - to:
    - namespaceSelector:
        matchLabels:
          ns: home-automation
      podSelector:
        matchLabels:
          app.kubernetes.io/name: emqx
    ports:
    - port: 18083
      protocol: TCP
  - to:
    - namespaceSelector:
        matchLabels:
          ns: jellyfin
      podSelector:
        matchLabels:
          app.kubernetes.io/name: jellyfin
    ports:
    - port: 8096
      protocol: TCP
  - to:
    - namespaceSelector:
        matchLabels:
          ns: unmanic
      podSelector:
        matchLabels:
          app.kubernetes.io/name: unmanic
    ports:
    - port: 8888
      protocol: TCP
  - to:
    - namespaceSelector:
        matchLabels:
          ns: sabnzbd
      podSelector:
        matchLabels:
          app.kubernetes.io/name: sabnzbd
    ports:
    - port: 8080
      protocol: TCP
  - to:
    - namespaceSelector:
        matchLabels:
          ns: wizarr
      podSelector:
        matchLabels:
          app.kubernetes.io/name: wizarr
    ports:
    - port: 5690
      protocol: TCP
  - to:
    - namespaceSelector:
        matchLabels:
          ns: speedtest
      podSelector:
        matchLabels:
          app.kubernetes.io/name: openspeedtest
    ports:
    - port: 3000
      protocol: TCP
  - to:
    - namespaceSelector:
        matchLabels:
          ns: ladder
      podSelector:
        matchLabels:
          app.kubernetes.io/name: ladder
    ports:
    - port: 8080
      protocol: TCP
  - to:
    - namespaceSelector:
        matchLabels:
          ns: bazarr
      podSelector:
        matchLabels:
          app.kubernetes.io/name: bazarr
    ports:
    - port: 6767
      protocol: TCP
  - to:
    - namespaceSelector:
        matchLabels:
          ns: pinchflat
      podSelector:
        matchLabels:
          app.kubernetes.io/name: pinchflat
    ports:
    - port: 8945
      protocol: TCP
  - to:
    - namespaceSelector:
        matchLabels:
          ns: immich
      podSelector:
        matchLabels:
          app.kubernetes.io/name: immich-server
    ports:
    - port: 2283
      protocol: TCP
  - to:
    - namespaceSelector:
        matchLabels:
          ns: immich
      podSelector:
        matchLabels:
          app.kubernetes.io/name: immich-pgadmin
    ports:
    - port: 80
      protocol: TCP
  - to:
    - namespaceSelector:
        matchLabels:
          ns: jellystat
      podSelector:
        matchLabels:
          app.kubernetes.io/name: jellystat
    ports:
    - port: 3000
      protocol: TCP
  - to:
    - namespaceSelector:
        matchLabels:
          ns: wallos
      podSelector:
        matchLabels:
          app.kubernetes.io/name: wallos
    ports:
    - port: 80
      protocol: TCP
  - to:
    - namespaceSelector:
        matchLabels:
          ns: firefly
      podSelector:
        matchLabels:
          app.kubernetes.io/name: firefly
    - namespaceSelector:
        matchLabels:
          ns: firefly
      podSelector:
        matchLabels:
          app.kubernetes.io/name: firefly-importer
    ports:
    - port: 8080
      protocol: TCP
  - to:
    - namespaceSelector:
        matchLabels:
          ns: netboot
      podSelector:
        matchLabels:
          app.kubernetes.io/name: netbootxyz
    ports:
    - port: 3000
      protocol: TCP
  - to:
    - ipBlock:
        cidr: 0.0.0.0/0
        except:
        - 10.0.0.0/8
        - 172.16.0.0/12
        - 192.168.0.0/16
    ports:
    - port: 443
      protocol: TCP
    # - port: 53
    #   protocol: UDP
